--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" herf="style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <header>this is version v4</header>
+    <header>this is version v4</header><br>
     <header>this is version v5</header>
     <header>this is version V6</header>
+    <h1>this is new modification</h1>
 </body>
 </html>
