new stayle version 3

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <header>this is version v5</header>
     <header>this is version V6</header>
     <h1>this is new modification</h1>
+    <h1>this is version 7.1</h1>
 </body>
 </html>
